set default for market selection radio buttons. added instrucitons to use tool.

--- a/index.html
+++ b/index.html
@@ -130,12 +130,26 @@
               </p>
             </div>
             <div>
-              <p id="timeframeNote">
-                Please note that market open dates are calculated using best
-                estimates of timeframes to add funds at the bank once AML/KYC is
-                submitted and timeframes to open markets once all documents are
-                submitted to the local markets.
-              </p>
+              <ol>
+                <li>
+                  Enter Fund Name, Account IDs, Target Launch Date and AML/KYC
+                  Date.
+                </li>
+                <li>Click on "Update Fund Details"</li>
+                <li>
+                  Click "Add / Update Markets" to select markets for fund
+                  launch. Indicate if required for day one or asap after launch.
+                </li>
+                <li>
+                  Market open dates for markets will be highlighted in green if
+                  feasible for launch and highlighted in red if not feasible.
+                </li>
+                <li>
+                  Market details can be downloaded as an Excel or CSV file by
+                  clicking on "Download as Excel" or "Download as CSV".
+                </li>
+              </ol>
+              >
             </div>
           </div>
         </div>
@@ -155,7 +169,7 @@
             </button>
             <div class="modal" id="modal">
               <div class="modal-header">
-                <div class="title">Select Day 1 Markets</div>
+                <div class="title">Add / Update Required Markets</div>
                 <button data-close-button class="close-button">
                   &times;
                 </button>
